# checkheaders

./: .gitignore  CMakeLists.txt  README.md  filternn.py
scripts/: genskip.py
src/: FileParser.cpp  FileParser.h  main.cpp
